<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/tvinput"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:background="@color/grey"
        android:gravity="bottom|end"
        android:padding="10dp"
        android:text="@string/no0"
        android:textSize="60sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:id="@+id/no7"
        android:text="@string/no7"
        android:textColor="@color/black"
        android:textSize="31sp"
        android:padding="10dp"
        android:onClick="onDigit"

        tools:ignore="NestedWeights,OnClick,UsingOnClickInXml" />

        />
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:layout_margin="2dp"

        android:layout_weight="1"
        android:id="@+id/no8"
        android:text="@string/no8"
        android:textColor="@color/black"
        android:textSize="31sp"
        android:padding="10dp"
        android:onClick="onDigit"

        tools:ignore="OnClick,UsingOnClickInXml"
        style="?android:attr/buttonBarButtonStyle" />
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"

        android:backgroundTint="@color/white"
        android:layout_weight="1"
        android:id="@+id/no9"
        android:text="@string/no9"
        android:textColor="@color/black"
        android:textSize="31sp"
        android:padding="10dp"
        android:onClick="onDigit"

        tools:ignore="OnClick,UsingOnClickInXml" />
        />

        <Button
    android:layout_width="0dp"
    android:layout_height="match_parent"
        android:layout_margin="2dp"

        android:backgroundTint="@color/white"
        android:layout_weight="1"
    android:id="@+id/div"
    android:text="@string/divide"
    android:textColor="@color/black"
    android:textSize="31sp"
    android:padding="10dp"
            android:onClick="onOperator"

            tools:ignore="OnClick,UsingOnClickInXml" />

    />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"


            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:id="@+id/no4"
            android:text="@string/no4"
            android:textColor="@color/black"
            android:textSize="31sp"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:onClick="onDigit"

            tools:ignore="OnClick,UsingOnClickInXml" />
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"

            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:id="@+id/no5"
            android:text="@string/no5"
            android:textColor="@color/black"
            android:textSize="31sp"
            android:padding="10dp"
            android:onClick="onDigit"

            tools:ignore="OnClick,UsingOnClickInXml" />
            style="?android:attr/buttonBarButtonStyle"
            />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:layout_margin="2dp"

                android:layout_weight="1"
                android:id="@+id/no6"
                android:text="@string/no6"
                android:textColor="@color/black"
                android:textSize="31sp"
                android:padding="10dp"
                android:onClick="onDigit"

                tools:ignore="OnClick,UsingOnClickInXml" />
                style="?android:attr/buttonBarButtonStyle" />
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
            android:layout_margin="2dp"

            android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:id="@+id/mul"
                android:text="@string/mul"
                android:textColor="@color/black"
                android:textSize="31sp"
                android:padding="10dp"
            android:onClick="onOperator"

            tools:ignore="OnClick,UsingOnClickInXml" />
                />



    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1"
    >


        <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
            android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:id="@+id/no1"
        android:text="@string/no1"
        android:textColor="@color/black"
        android:textSize="31sp"
        android:padding="10dp"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="OnClick,UsingOnClickInXml" />


    />
        <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
            android:layout_margin="2dp"

            android:backgroundTint="@color/white"
            android:layout_weight="1"
        android:id="@+id/no2"
        android:text="@string/no2"
        android:textColor="@color/black"
        android:textSize="31sp"
        android:padding="10dp"
            android:onClick="onDigit"
            tools:ignore="OnClick,UsingOnClickInXml" />


    />
        <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
            android:layout_margin="2dp"

            android:backgroundTint="@color/white"
            android:layout_weight="1"
        android:id="@+id/no3"
        android:text="@string/no3"
        android:textColor="@color/black"
        android:textSize="31sp"
        android:padding="10dp"
            android:onClick="onDigit"
            tools:ignore="OnClick,UsingOnClickInXml" />

        />
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"

        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:id="@+id/sub"
        android:text="@string/sub"
        android:textColor="@color/black"
        android:textSize="31sp"
        android:padding="10dp"
        android:onClick="onOperator"
        tools:ignore="OnClick,UsingOnClickInXml" />

        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/white"
            android:id="@+id/dot"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="31sp"
            android:padding="10dp"
            android:onClick="onDecimal"
            tools:ignore="OnClick,UsingOnClickInXml" /><![CDATA[

        />

            ]]>

        <Button
            android:id="@+id/no0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="onDigit"
            android:padding="10dp"
            android:text="@string/no0"
            android:textColor="@color/black"
            android:textSize="31sp"
            tools:ignore="OnClick,UsingOnClickInXml" />

        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"

                android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:id="@+id/clear"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="31sp"
            android:padding="10dp"
                android:onClick="onClear"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"

                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="31sp"
                android:onClick="onOperator"


                tools:ignore="OnClick,UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"

            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:id="@+id/equal"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:textSize="31sp"
            android:padding="10dp"
            android:onClick="onEqual"

            tools:ignore="OnClick,UsingOnClickInXml" />
    </LinearLayout>
    </LinearLayout>
    

